# watchdog-http

./: .dockerignore  .env-example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: main.py
src/config/: settings.py
src/core/: database.py  db_types.py  dependencies.py
src/migrations/: env.py
src/migrations/versions/: 84523c08cf3e_initial_migration.py  a1b6fea2c6f8_add_api_key_to_users.py
src/models/: __init__.py  monitor.py  resultlog.py  user.py
src/routes/: monitors.py  users.py
src/schemas/: auth.py  monitor.py  user.py
src/services/: monitor.py  user.py
src/telegram/: __init__.py  bot.py  notifier.py
src/utils/: random_generate.py
src/worker/: main.py
